# cad_mouse_mk2_firmware

./: Cargo.toml  flash.sh
.cargo/: config.toml
src/: main.rs  reset_interface.rs  sensors.rs
