[package]
edition = "2024"
name = "cad-mouse-mk2-firmware"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
resolver = "2"

[[bin]]
name = "cad-mouse-mk2-firmware"
test = false
bench = false

[dependencies]
defmt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.7"
embedded-io-async = "0.7"
embedded-storage = "0.3.1"
cortex-m-rt = "0.7.3"

embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-sync = "0.8"
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }

cortex-m = { version = "0.7.7" }
embassy-rp = { version = "0.9", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa"] }
embassy-usb = "0.5.1"
static_cell = "2.1.1"
defmt-embassy-usbserial = "0.2.1"
tli493d = { path = "../tli493d", features = ["defmt"] }
embassy-embedded-hal = "0.6.0"
[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
